fixed spacing on mobile footer links

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -14,11 +14,12 @@
 @media screen and (max-width: 749px) {
   .footer .grid {
     display: block;
+    margin-bottom: 0;
   }
 
   .footer-block.grid__item {
     padding: 0;
-    margin: 4rem 0;
+    margin: 3rem 0;
     width: 100%;
   }
 
@@ -27,7 +28,7 @@
   }
 
   .footer__content-top {
-    padding-bottom: 3rem;
+    padding-bottom: 0rem;
     padding-left: calc(4rem / var(--font-body-scale));
     padding-right: calc(4rem / var(--font-body-scale));
   }
@@ -388,7 +389,8 @@ noscript .localization-selector.link {
 }
 
 .footer-block__details-content {
-  margin-bottom: 4rem;
+  margin-bottom: 0;
+  max-width: 10rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -436,8 +438,8 @@ noscript .localization-selector.link {
 
 @media screen and (max-width: 989px) {
   .footer-block__details-content .list-menu__item--link {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
